force-app/main/default/objects/SiebelOrderAttribute__x/SiebelOrderAttribute__x.object-meta.xml
<CustomObject>
    <description>SiebelOrderAttribute</description>
    <externalDataSource>Hera_Archive</externalDataSource>
    <externalName>SiebelOrderAttribute</externalName>
    <label>Attributi Ordine Siebel</label>
    <pluralLabel>SiebelOrderAttribute</pluralLabel>
</CustomObject>