force-app/main/default/objects/SiebelOrderAttribute__x/fields/ATTRIB_03__c.field-meta.xml
<CustomField>
    <fullName>ATTRIB_03__c</fullName>
    <description>ATTRIB_03</description>
    <externalDeveloperName>ATTRIB_03</externalDeveloperName>
    <label>Pagamento</label>
    <length>50</length>
    <type>Text</type>
</CustomField>