force-app/main/default/objects/SiebelOrderAttribute__x/fields/ATTRIB_04__c.field-meta.xml
<CustomField>
    <fullName>ATTRIB_04__c</fullName>
    <description>ATTRIB_04</description>
    <externalDeveloperName>ATTRIB_04</externalDeveloperName>
    <label>ATTRIB_04</label>
    <length>50</length>
    <type>Text</type>
</CustomField>