force-app/main/default/objects/SiebelOrderAttribute__x/fields/ATTRIB_05__c.field-meta.xml
<CustomField>
    <fullName>ATTRIB_05__c</fullName>
    <description>ATTRIB_05</description>
    <externalDeveloperName>ATTRIB_05</externalDeveloperName>
    <label>ATTRIB_05</label>
    <length>50</length>
    <type>Text</type>
</CustomField>