force-app/main/default/objects/SiebelOrderAttribute__x/fields/BANK_NAME__c.field-meta.xml
<CustomField>
    <fullName>BANK_NAME__c</fullName>
    <description>BANK_NAME</description>
    <externalDeveloperName>BANK_NAME</externalDeveloperName>
    <label>Nome Banca</label>
    <length>100</length>
    <type>Text</type>
</CustomField>