force-app/main/default/objects/SiebelOrderAttribute__x/fields/CREATED__c.field-meta.xml
<CustomField>
    <fullName>CREATED__c</fullName>
    <description>CREATED</description>
    <externalDeveloperName>CREATED</externalDeveloperName>
    <label>Data Creazione</label>
    <type>Date</type>
</CustomField>